# l2f-constant-reward

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile_ui  README.MD  TODO.MD  setup.py  validation.json
hpo/: .gitignore  ax_test.py  bayesian_optimization_test.py  bayesian_optimization_test2.py  bayesian_optimization_test3.py  objective.py  objective2.py  objective3.py  optuna_test.py  params.py  plot.ipynb  plot.jl  plot.py  ray_tune_test.py  run_all.sh  vizier_test.py
hpo/hpo_results/: ax.json  bayesian_optimization.json  bayesian_optimization2.json  optuna.json  ray_tune.json  vizier.json
hpo/hpo_results_gamma_pos/: bayesian_optimization2.json
include/learning_to_fly/simulator/: metrics.h  multirotor.h  operations_cpu.h  operations_generic.h  ui.h
include/learning_to_fly/simulator/parameters/: registry.h
include/learning_to_fly/simulator/parameters/dynamics/: crazy_flie.h  fs.h  mrs.h  race.h  x500_real.h  x500_sim.h
include/learning_to_fly/simulator/parameters/init/: default.h
include/learning_to_fly/simulator/parameters/reward_functions/: absolute.h  default.h  squared.h
include/learning_to_fly/simulator/parameters/termination/: default.h
parameters/: action_baseline.py  base.json  base_x500_real.json  default.json  fs_base.py  fs_conservative.py  test.json  x500_real.py  x500_real_test.py
parameters/base/: crazyflie.json  fs_base.json  fs_conservative.json  x500_real.json  x500_real_test.json  x500_real_v2.json
parameters/dynamics/: crazyflie.json  fs_base.json  fs_conservative.json  x500_real.json
parameters/output/: crazyflie.json  default.json  fs_base.json  fs_conservative.json  x500_real.json  x500_real_test.json
parameters/transformations/: hovering_throttle.py  j_inv.py
scripts/: plot_trajectories.jl
src/: CMakeLists.txt  evaluate_actor.cpp  evaluate_actor_headless.cpp  training.cpp  training.h  training_state.h  validation.cpp
src/bindings/: .gitignore  CMakeLists.txt  build_import_export.sh  import_export.cpp  l2f.cpp  test.py  test_actor_simulation_optimization.cpp  ui_model.json
src/config/: ablation.h  actor_and_critic.h  config.h  parameters.h  validation.h
src/cuda/: CMakeLists.txt
src/init/: load_config.h
src/steps/: checkpoint.h  critic_reset.h  curriculum.h  log_reward.h  logger.h  validation.h
src/ui/: CMakeLists.txt  server.cpp
tools/: learning_curves.sh
transferability_assessment/: .gitignore  evaluate.jl
transferability_assessment/data/: .gitignore  data_table.json  regression_data.csv  regression_data_clean.csv
